--- a/templates/cluster-template-v1.20.8.yaml
+++ b/templates/cluster-template-v1.20.8.yaml
@@ -3,19 +3,12 @@ kind: Cluster
 metadata:
   name: ${CLUSTER_NAME}
   namespace: ${TARGET_NAMESPACE}
-  labels:
-    cluster-role.tkg.tanzu.vmware.com/management: ""
-    tanzuKubernetesRelease: ${TKR_VERSION}
-    tkg.tanzu.vmware.com/cluster-name: ${CLUSTER_NAME}
-  annotations:
-    osInfo: ubuntu,20.04,amd64
-    TKGVERSION: ${TKG_VERSION}
 spec:
   clusterNetwork:
     pods:
       cidrBlocks:
         - ${POD_CIDR} # pod CIDR for the cluster
-    serviceDomain: k8s.test
+    serviceDomain: cluster.local
     services:
       cidrBlocks:
         - ${SERVICE_CIDR} # service CIDR for the cluster
@@ -51,20 +44,13 @@ spec:
   org: ${VCD_ORGANIZATION} # VCD organization name where the cluster should be deployed
   ovdc: ${VCD_ORGANIZATION_VDC} # VCD virtual datacenter name where the cluster should be deployed
   ovdcNetwork: ${VCD_ORGANIZATION_VDC_NETWORK} # VCD virtual datacenter network to be used by the cluster
-  parentUid: ${PARENT_RDE_ID} # create the CAPVCD cluster from a specific management cluster associated with this UID.
-  useAsManagementCluster: ${USE_AS_MANAGEMENT_CLUSTER} # intent to use the resultant CAPVCD cluster as a management cluster
+  useAsManagementCluster: false # intent to use the resultant CAPVCD cluster as a management cluster
   userContext:
     secretRef:
       name: capi-user-credentials # name of the secret containing the credentials of the VCD persona creating the cluster
       namespace: ${TARGET_NAMESPACE} # name of the secret containing the credentials of the VCD persona creating the cluster
-  rdeId: ${VCD_RDE_ID} # rdeId if it is already created. If empty, CAPVCD will create one for the cluster.
   loadBalancerConfigSpec:
-    vipSubnet: ${IP_SUBNET} # Virtual IP CIDR for the external network
-    useOneArm: ${ENABLE_ONEARM}
-  proxyConfigSpec:
-    httpProxy: ${HTTP_PROXY}
-    httpsProxy: ${HTTPS_PROXY}
-    noProxy: ${NO_PROXY}
+    vipSubnet: "" # Virtual IP CIDR for the external network
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: VCDMachineTemplate
@@ -78,8 +64,7 @@ spec:
       template: ${VCD_TEMPLATE_NAME} # Name of the template to be used to create (or) upgrade the control plane nodes
       sizingPolicy: ${VCD_CONTROL_PLANE_SIZING_POLICY} # Sizing policy to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       placementPolicy: ${VCD_CONTROL_PLANE_PLACEMENT_POLICY} # Placement policy to be used for worker VMs (this must be pre-published on the chosen organization virtual datacenter)
-      storageProfile: ${VCD_CONTROL_PLANE_STORAGE_PROFILE} # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
-      # enableNvidiaGpu: ${ENABLE_NVIDIA_GPU} # No GPU config on control plane
+      storageProfile: "${VCD_CONTROL_PLANE_STORAGE_PROFILE}" # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       diskSize: ${DISK_SIZE}
 ---
 apiVersion: controlplane.cluster.x-k8s.io/v1beta1
@@ -108,7 +93,7 @@ spec:
     users:
       - name: root
         sshAuthorizedKeys:
-          - ${SSH_PUBLIC_KEY} # ssh public key to log in to the control plane VMs in VCD
+          - "${SSH_PUBLIC_KEY}" # ssh public key to log in to the control plane VMs in VCD
     initConfiguration:
       nodeRegistration:
         criSocket: /run/containerd/containerd.sock
@@ -133,7 +118,7 @@ spec:
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: VCDMachineTemplate
 metadata:
-  name: ${CLUSTER_NAME}-${WORKER_POOL_NAME}
+  name: ${CLUSTER_NAME}-md-0
   namespace: ${TARGET_NAMESPACE}
 spec:
   template:
@@ -142,14 +127,13 @@ spec:
       template: ${VCD_TEMPLATE_NAME} # Name of the template to be used to create (or) upgrade the worker nodes
       sizingPolicy: ${VCD_WORKER_SIZING_POLICY} # Sizing policy to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       placementPolicy: ${VCD_WORKER_PLACEMENT_POLICY} # Placement policy to be used for worker VMs (this must be pre-published on the chosen organization virtual datacenter)
-      storageProfile: ${VCD_WORKER_STORAGE_PROFILE} # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
-      enableNvidiaGpu: ${ENABLE_NVIDIA_GPU}
+      storageProfile: "${VCD_WORKER_STORAGE_PROFILE}" # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       diskSize: ${DISK_SIZE}
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
 metadata:
-  name: ${CLUSTER_NAME}-${WORKER_POOL_NAME}
+  name: ${CLUSTER_NAME}-md-0
   namespace: ${TARGET_NAMESPACE}
 spec:
   template:
@@ -157,7 +141,7 @@ spec:
       users:
         - name: root
           sshAuthorizedKeys:
-            - ${SSH_PUBLIC_KEY} # ssh public key to log in to the worker VMs in VCD
+            - "${SSH_PUBLIC_KEY}" # ssh public key to log in to the worker VMs in VCD
       joinConfiguration:
         nodeRegistration:
           criSocket: /run/containerd/containerd.sock
@@ -168,7 +152,7 @@ spec:
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachineDeployment
 metadata:
-  name: ${CLUSTER_NAME}-${WORKER_POOL_NAME}
+  name: ${CLUSTER_NAME}-md-0
   namespace: ${TARGET_NAMESPACE}
 spec:
   clusterName: ${CLUSTER_NAME} # name of the Cluster object
@@ -181,12 +165,12 @@ spec:
         configRef:
           apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
           kind: KubeadmConfigTemplate
-          name: ${CLUSTER_NAME}-${WORKER_POOL_NAME} # name of the KubeadmConfigTemplate object
+          name: ${CLUSTER_NAME}-md-0 # name of the KubeadmConfigTemplate object
           namespace: ${TARGET_NAMESPACE} # kubernetes namespace of the KubeadmConfigTemplate object. Should be the same namespace as that of the Cluster object
       clusterName: ${CLUSTER_NAME} # name of the Cluster object
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
         kind: VCDMachineTemplate
-        name: ${CLUSTER_NAME}-${WORKER_POOL_NAME} # name of the VCDMachineTemplate object used to deploy worker nodes
+        name: ${CLUSTER_NAME}-md-0 # name of the VCDMachineTemplate object used to deploy worker nodes
         namespace: ${TARGET_NAMESPACE} # kubernetes namespace of the VCDMachineTemplate object used to deploy worker nodes
       version: v1.20.8+vmware.1 # Kubernetes version to be used to create (or) upgrade the worker nodes. The value needs to be retrieved from the respective TKGm ova BOM. Refer to the documentation.
