fix: update webhook server secret name
- This MR updates the webhook server cert secret name from webhook-server-cert to
  capvcd-webhook-server-cert to avoid other controllers Certificate overwriting the
  CAPVCD certificate. webhook-server-cert is very common name and it is default secret
  name of any operator created using kubebuilder.

  This is a problem when multiple controller built using kubebuilder are deployed in the
  namespace.

--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -1601,7 +1601,7 @@ spec:
       - name: cert
         secret:
           defaultMode: 420
-          secretName: webhook-server-cert
+          secretName: capvcd-webhook-server-cert
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
@@ -1617,7 +1617,7 @@ spec:
   issuerRef:
     kind: Issuer
     name: capvcd-selfsigned-issuer
-  secretName: webhook-server-cert
+  secretName: capvcd-webhook-server-cert
 ---
 apiVersion: cert-manager.io/v1
 kind: Issuer
