--- a/templates/crs/tanzu/v1.6.1/v1.6.1-antrea.yaml.template
+++ b/templates/crs/tanzu/v1.6.1/v1.6.1-antrea.yaml.template
@@ -5060,7 +5060,7 @@ stringData:
     #@data/values
     #@overlay/match-child-defaults missing_ok=True
     ---
-    infraProvider: cloud-director
+    infraProvider: vsphere
     antrea:
       config:
         egress:
