--- a/templates/crs/csi/csi-node-crs.yaml
+++ b/templates/crs/csi/csi-node-crs.yaml
@@ -116,6 +116,9 @@ spec:
               mountPath: /etc/kubernetes/vcloud
             - name: vcloud-basic-auth-volume
               mountPath: /etc/kubernetes/vcloud/basic-auth
+            - mountPath: /run
+              name: host-run-dir
+              mountPropagation:  "HostToContainer"
       volumes:
         - name: socket-dir
           hostPath:
@@ -147,4 +150,8 @@ spec:
         - name: vcloud-basic-auth-volume
           secret:
             secretName: vcloud-basic-auth
+        - name: host-run-dir
+          hostPath:
+            path: /run
+            type: Directory
 ---
