[CAFV-200] Update manifests generated to point to projects.registry.vmware.com
Signed-off-by: lzichong <lzichong@vmware.com>

--- a/artifacts/bom.json.template
+++ b/artifacts/bom.json.template
@@ -16,7 +16,7 @@
 			{
 				"name":"cluster-api-provider-cloud-director",
 				"version":"__VERSION__",
-				"imageRepository":"__REGISTRY__"
+				"imageRepository":"projects.registry.vmware.com/vmware-cloud-director"
 			}
 		]
 	}
