--- a/artifacts/dependencies.txt.template
+++ b/artifacts/dependencies.txt.template
@@ -1,1 +1,1 @@
-__REGISTRY__ cluster-api-provider-cloud-director __VERSION__
+projects.registry.vmware.com/vmware-cloud-director cluster-api-provider-cloud-director __VERSION__
