--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -22,7 +22,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: projects.registry.vmware.com/vmware-cloud-director/cluster-api-provider-cloud-director:1.0.0
+        image: projects.registry.vmware.com/vmware-cloud-director/cluster-api-provider-cloud-director:1.0.1-rc
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
