--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -1560,7 +1560,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: projects.registry.vmware.com/vmware-cloud-director/cluster-api-provider-cloud-director:main-branch-a647055
+        image: projects-stg.registry.vmware.com/vmware-cloud-director/cluster-api-provider-cloud-director:main-branch-efdd678
         livenessProbe:
           httpGet:
             path: /healthz
