--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -22,7 +22,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: projects-stg.registry.vmware.com/vmware-cloud-director/cluster-api-provider-cloud-director:main-branch-efdd678
+        image: projects.registry.vmware.com/vmware-cloud-director/cluster-api-provider-cloud-director:main-branch-05911c8
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
