--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -552,22 +552,26 @@ spec:
                   updated.
                 type: boolean
               vcdResourceMap:
-                additionalProperties:
-                  description: VCDResources provide records of the latest ID and name
-                    of some VCD Resources.
-                  items:
-                    description: VCDResource restores the data structure for some
-                      VCD Resources
-                    properties:
-                      id:
-                        type: string
-                      name:
-                        type: string
-                      type:
-                        type: string
-                    type: object
-                  type: array
                 description: optional
+                properties:
+                  ovdcs:
+                    description: VCDResources stores the latest ID and name of VCD
+                      resources for specific resource types.
+                    items:
+                      description: VCDResource restores the data structure for some
+                        VCD Resources
+                      properties:
+                        id:
+                          type: string
+                        name:
+                          type: string
+                        type:
+                          type: string
+                      required:
+                      - id
+                      - name
+                      type: object
+                    type: array
                 type: object
             required:
             - rdeVersionInUse
