--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -491,20 +491,24 @@ spec:
                 description: MetadataUpdated denotes that the metadata of Vapp is updated.
                 type: boolean
               vcdResourceMap:
-                additionalProperties:
-                  description: VCDResources provide records of the latest ID and name of some VCD Resources.
-                  items:
-                    description: VCDResource restores the data structure for some VCD Resources
-                    properties:
-                      id:
-                        type: string
-                      name:
-                        type: string
-                      type:
-                        type: string
-                    type: object
-                  type: array
                 description: optional
+                properties:
+                  ovdcs:
+                    description: VCDResources stores the latest ID and name of VCD resources for specific resource types.
+                    items:
+                      description: VCDResource restores the data structure for some VCD Resources
+                      properties:
+                        id:
+                          type: string
+                        name:
+                          type: string
+                        type:
+                          type: string
+                      required:
+                      - id
+                      - name
+                      type: object
+                    type: array
                 type: object
             required:
             - rdeVersionInUse
