--- a/tests/e2e/utils/config_map_files/vcloud-csi-config.yaml
+++ b/tests/e2e/utils/config_map_files/vcloud-csi-config.yaml
@@ -1,25 +1,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: vcloud-ccm-configmap
+  name: vcloud-csi-configmap
   namespace: kube-system
 data:
-  vcloud-ccm-config.yaml: |+
+  vcloud-csi-config.yaml: |+
     vcd:
       host: {{.VcdHost}}
       org: {{.ORG}}
       vdc: {{.OVDC}}
-    loadbalancer:
-      oneArm:
-        startIP: "192.168.8.2"
-        endIP: "192.168.8.100"
-      ports:
-        http: 80
-        https: 443
-      network: {{.Network}}
-      vipSubnet: ""
-      certAlias: {{.ClusterID}}-cert
-      enableVirtualServiceSharedIP: false # supported for VCD >= 10.4
     clusterid: {{.ClusterID}}
     vAppName: {{.VAPP}}
 immutable: true
