--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclustertemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclustertemplates.yaml
@@ -167,7 +167,7 @@ spec:
           spec:
             description: VCDClusterTemplateSpec defines the desired state of VCDClusterTemplate
             properties:
-              foo:
+              template:
                 description: Foo is an example field of VCDClusterTemplate. Edit vcdclustertemplate_types.go
                   to remove/update
                 properties:
@@ -358,6 +358,8 @@ spec:
                 required:
                 - spec
                 type: object
+            required:
+            - template
             type: object
           status:
             description: VCDClusterTemplateStatus defines the observed state of VCDClusterTemplate
