--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -1243,7 +1243,7 @@ spec:
           spec:
             description: VCDClusterTemplateSpec defines the desired state of VCDClusterTemplate
             properties:
-              foo:
+              template:
                 description: Foo is an example field of VCDClusterTemplate. Edit vcdclustertemplate_types.go
                   to remove/update
                 properties:
@@ -1434,6 +1434,8 @@ spec:
                 required:
                 - spec
                 type: object
+            required:
+            - template
             type: object
           status:
             description: VCDClusterTemplateStatus defines the observed state of VCDClusterTemplate
