--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -20,7 +20,7 @@ patchesStrategicMerge:
 - patches/webhook_in_vcdmachines.yaml
 - patches/webhook_in_vcdclusters.yaml
 - patches/webhook_in_vcdmachinetemplates.yaml
-#- patches/webhook_in_vcdclustertemplates.yaml
+- patches/webhook_in_vcdclustertemplates.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -28,7 +28,7 @@ patchesStrategicMerge:
 - patches/cainjection_in_vcdmachines.yaml
 - patches/cainjection_in_vcdclusters.yaml
 - patches/cainjection_in_vcdmachinetemplates.yaml
-#- patches/cainjection_in_vcdclustertemplates.yaml
+- patches/cainjection_in_vcdclustertemplates.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
